# datasas

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  wireframe.drawio
api/: README.md  jdbc_conn.py  kafka_conn.py  message_queue_conn.py  rest_api_conn.py  sftp_conn.py
api/app/: apis.py  authentication.py  mappings.py  requirements.txt  wireframe.drawio
api/conn/: api.py  common.py  kafka_conn.py  rest_api_conn.py  sftp_conn.py
api/utils/: s3_put.py
apis/components/: Dockerfile  authentication.py  build.sh  config.json
apis/services/: README.md  jdbc_conn.py  kafka_conn.py
docker/kafka/: Dockerfile  build.sh  producer.py
docker/krakend/: Dockerfile  docker-compose.yaml  install.sh  krakend.tmpl  shutdown.sh
docker/loki/: docker-compose.yml
docker/nifi/: Dockerfile  install.sh
docker/prometheus/: docker-compose 2.yml  install.sh  prometheus 2.yaml
docker/superset/: install 2.sh
docker/vault/: Dockerfile  config.hcl
gateway/: README.md  docker-compose.yml
infra/airbyte/: install.sh
k8s/krakend/: krakend.yaml
k8s/minio/: kustomization.yaml  minio-dev.yaml  minio-ingress.yaml  minio-service.yaml  minio-storage.yaml
k8s/nginx/: install.sh
k8s/nifi/: nifi.yaml
k8s/superset/: install.sh
portal/: index.html
webapp/: docker-compose.yml  package-lock.json  setup.sql
webapp/client/: .stylelintrc  Dockerfile  README.MD  package-lock.json  package.json
webapp/client/src/: App.js  (+1 more)
webapp/client_admin/: .gitignore  App.js  README.md  package-lock.json  package.json
webapp/scripts/: start.sh  stop.sh
webapp/server/: index.js
(+33 files in other folders)
