[tool.poetry]
name = "datasas"
version = "0.1.0"
description = "Data Project for Integration"
authors = ["longbuivan <longbuivan95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flask
flask_restful
confluent_kafka
psycopg2-binary
hvac


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
